// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test HarnessServicetModal should validate create mode save 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main main"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    New_Service
                  </span>
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="deployService_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="New Service"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <label
            class="Label--main descriptionLabel"
          >
            optionalField
            <span
              class="bp3-icon StyledProps--main editOpen"
              data-icon="Edit"
              data-name="edit"
              data-testid="description-edit"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </label>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <label
            class="Label--main descriptionLabel"
          >
            optionalField
            <span
              class="bp3-icon StyledProps--main editOpen"
              data-icon="Edit"
              data-name="edit"
              data-testid="tags-edit"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </label>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          data-id="service-save"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
           
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test HarnessServicetModal should validate edit mode snapshot 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main main"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Service_101
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="deployService_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="Service 102"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <label
            class="Label--main descriptionLabel"
          >
            optionalField
            <span
              class="bp3-icon StyledProps--main editOpen"
              data-icon="Edit"
              data-name="edit"
              data-testid="description-edit"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </label>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <label
            class="Label--main descriptionLabel"
          >
            optionalField
            <span
              class="bp3-icon StyledProps--main editOpen"
              data-icon="Edit"
              data-name="edit"
              data-testid="tags-edit"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </label>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          data-id="service-save"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
           
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test HarnessServicetModal validation are present if submited with empty value 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main main"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Service_102
                  </span>
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group bp3-intent-danger"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="deployService_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group bp3-intent-danger"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="Service 102"
                />
              </div>
              <div
                class="bp3-form-helper-text"
              >
                <div
                  class="FormError--errorDiv"
                >
                  <span
                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                    data-icon="circle-cross"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 13 13"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="FormError--error"
                  >
                    fieldRequired
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <label
            class="Label--main descriptionLabel"
          >
            optionalField
            <span
              class="bp3-icon StyledProps--main editOpen"
              data-icon="Edit"
              data-name="edit"
              data-testid="description-edit"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </label>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <label
            class="Label--main descriptionLabel"
          >
            optionalField
            <span
              class="bp3-icon StyledProps--main editOpen"
              data-icon="Edit"
              data-name="edit"
              data-testid="tags-edit"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </label>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          data-id="service-save"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
           
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
